Fixed grid for mobile screens
I put a fixed value of 30px on columns 1 and 12 so that the grid has white space on both sides. Without this, the first column seems to get bigger.

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ img {
 
 body {
     margin: 0;
+    padding: 0;
     line-height: 1.5;
 }
 
@@ -54,9 +55,9 @@ ul {
 /* Main Grid */
 .body__container {
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
+    grid-template-columns: 30px repeat(10, 1fr) 30px;
     grid-template-rows: 0.7fr repeat(4, auto) 1fr;
-    gap: 2rem;
+    grid-row-gap: 1rem;
 }
 
 .grid__full {
@@ -71,7 +72,7 @@ ul {
 /* Second Grid */
 .second__grid {
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
+    grid-template-columns: 30px repeat(10, 1fr) 30px;
 }
 
 .second__grid > * {
@@ -85,6 +86,7 @@ ul {
 
 /* header */
 header {
+    grid-column: 2 / 12;
     grid-row: 1 / 2;
     position: fixed;
     z-index: 999;
@@ -121,11 +123,13 @@ header {
 
 /* main */
 main {
+    grid-column: 2 / 12;
     grid-row: 2 / 4;
 }
 
 /* portfolio section */
 .portfolio__section {
+    grid-column: 2 / 12;
     grid-row: 4 / 6;
 }
 
@@ -193,8 +197,33 @@ footer {
 }
 
 
+/* 540px MEDIA QUERY */
+@media (min-width: 540px) {
 
-/* media query for menu */
+    /* Header */
+
+    body {
+        text-align: center;
+    }
+
+    main {
+        margin-top: 2rem;
+    }
+
+    /* Footer */
+    .social__icons {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    footer li {
+        margin: 0.8rem;
+    }
+}
+
+
+/* 900px MEDIA QUERY */
 @media (min-width: 900px) {
 
 /* Grid */
@@ -222,7 +251,7 @@ footer {
 
     footer {
         grid-column: 2 / 12;
-        grid-row: 5 / 6;
+        grid-row: 5 / -1;
     }
 
     /* Hide menu icon */
@@ -281,6 +310,10 @@ footer {
     }
 
     /* main */
+    main {
+        margin-top: 0;
+    }
+
     .main__grid {
         display: grid;
         grid-template-areas: 
@@ -310,6 +343,7 @@ footer {
         grid-template-areas:
         "item1 item2 item3 item4";
         grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 1fr;
         grid-gap: 1rem;
     }
 
